# aiden_agent

./: .env.sample  .gitignore  BrewGuide with Sources.md  BrewGuide.md  CLAUDE.md  FELLOW_AIDEN_API_DOCUMENTATION.md  README.md  pyproject.toml  rxconfig.py
aiden_companion/: __init__.py  aiden_companion.py
aiden_companion/agent/: barista.py
aiden_companion/core/: aiden_client.py  water_recipes.json
aiden_companion/tools/: aiden_tools.py  search_tools.py  water_tools.py
aidenhelper/: aidenhelper.py
